SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_16.lang
var x = 16 var y = 10;